--- a/读书笔记二.md
+++ b/读书笔记二.md
@@ -44,9 +44,20 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 
 3.当请求到达后，会按照从上往下顺序匹配，所以权限配置顺序很重要
 
-### 13.3.2角色继承
+如果系统同时存在角色和权限，角色类可继承GrantedAuthority实现，权限可以是使用SimpleGrantedAuthority来实现，在定义用户类时将角色转换为权限即可。
 
-如果要配置角色继承，只需提供RoleHierarchy实例
 
-### 13.3.3自定义表达式
+```java
+@Getter
+@Setter
+public class Role implements GrantedAuthority {
+    private String name;
+    private List<SimpleGrantedAuthority> allowedOperations = new ArrayList<>();
+
+    @Override
+    public String getAuthority() {
+        return this.name;
+    }
+}
+```
 
