--- a/读书笔记二.md
+++ b/读书笔记二.md
@@ -174,3 +174,122 @@ protected void configure(HttpSecurity http) throws Exception {
 ```
 
 ### 13.3.5 动态管理权限规则
+
+模块：`nobody-study/nobody-dynamic-auth`
+
+## 13.4基于方法的权限管理
+
+### 13.4.1注解介绍
+
+通过@EnableGlobalMethodSecurity注解开启权限注解的使用：
+
+```java
+@Configuration
+@EnableGlobalMethodSecurity(prePostEnabled = true,securedEnabled = true,jsr250Enabled = true)
+public class SecurityConfig {
+}
+```
+注解属性介绍：
+
+- prePostEnabled：开启Spring Security提供的四个权限注解，@PreAuthorize、@PostAuthorize、@PreFilter、@PostFilter
+- securedEnabled：开启Spring Security提供的两个权限注解，@Secured，不支持权限表达式
+- jsr250Enabled：开启JSR-250提供的权限注解，主要包括@RolesAllowed、@DenyAll、@PermitAll，不支持权限表达式
+
+注解介绍：
+
+- @PreAuthorize：在目标方法之前之后进行权限校验
+- @PostFilter：在目标方法执行之后对返回结果进行过滤
+- @PreAuthorize：在目标方法之前进行权限校验
+- @PreFilter：在目标方法执行之前对参数进行过滤
+- @Secured：访问目标方法必须具备相应的角色
+- @DenyAll：拒绝所有访问
+- @PermitAll：允许所有访问
+- @RolesAllowed：访问目标方法必须具备相应的角色
+
+一般`prePostEnable=true`够用
+
+### 13.4.2基本用法
+
+- @PreAuthorize示例
+- 
+```java
+@Service
+public class HelloService {
+    @PreAuthorize("hasRole('ADMIN') and authentication.name==#username")
+    public String hello(String username){
+        return "hello";
+    }
+}
+```
+通过`#`可以引用方法的参数
+
+- PreFilter示例
+
+```java
+@Service
+public class HelloService {
+    @PreFilter(value = "filterObject.id%2!=0",filterTarget = "users")
+    public void addUser(List<User> users, Integer other){
+        for (User user : users) {
+            System.out.println(user);
+        }
+    }
+}
+```
+filterObject是一个内置对象，filterTarget是过滤的目标对象，如果方法只有一个参数，filterObject就代表这参数，如果有多个，需要通过filterTarget指定
+
+这里只会打印id为奇数的用户
+
+- @PostAuthorize示例
+
+```java
+@Service
+public class HelloService {
+    @PostAuthorize("returnObject.id==1")
+    public User getUser(Integer id){
+        return new User(id,"admin","123456");
+    }
+}
+```
+返回的id必须为1，否则抛出异常；此注解在ACL权限模型中会用到
+
+- @PostFilter示例
+
+```java
+public class HelloService {
+@PostFilter("filterObject.id%2!=0")
+    public List<User> getAllUser(){
+        List<User> list = new ArrayList<>();
+        for (int i = 0; i < 10; i++) {
+            list.add(new User(i,"admin"+i,"123456"));
+        }
+        return list;
+    }
+}
+```
+效果同@PreFilter
+
+- @Secured示例
+
+```java
+public class HelloService {
+    //表示用户需要具备ROLE_ADMIN,ROLE_USER两个角色才能访问
+    @Secured({"ROLE_ADMIN", "ROLE_USER"})
+    public User getUserByUsername(String username) {
+        return new User(1, "admin", "123456");
+    }
+}
+```
+@Secured不支持权限表达式
+
+- @RolesAllowed示例
+- 
+```java
+public class HelloService {
+    @RolesAllowed({"ADMIN","USER"})
+    public String rolesAllowed(){
+        return "rolesAllowed";
+    }
+}
+```
+RolesAllowed是jsr-250提供的注解，可以添加方法上，也可添加在类上，添加在类上对所有方法都有效，如果类上和方法上都有，则以方法上的注解为准
